Fixed Height Slider On Mobile

--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,13 +1,21 @@
+@use "../../styles/mixins" as *;
+
 .slider {
   position: relative;
   width: 100%;
+  height: 100px;
   overflow: hidden;
   border-radius: 12px;
   margin-bottom: 30px;
+
+  @include screen("md") {
+    height: auto;
+  }
 }
 
 .slides {
   display: flex;
+  height: 100%;
   transition: transform 0.5s ease-in-out;
 }
 
@@ -17,6 +25,10 @@
     width: 100%;
     display: block;
     border-radius: 12px;
+
+    height: 100%;
+    object-fit: cover;
+    object-position: left;
   }
 }
 
